[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-genai>=1.52.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "kernel>=0.20.0",
]
